# wikimedia-jp-queue-bot

./: .gitignore  Cargo.toml  compose.yaml  mwbot.test.toml  queuebot.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: test.yaml
.sqlx/: query-4e6d15da2e83574cd2c8d825816dbaf3b93326c643a4c1ed751d062409dbe262.json  query-7e1140bb769c6c9469140cadf9b1349381c45be794df0e2fc2701c5183b7c0e3.json  query-b5e46342a7394adce7e18ff36e4376a1ed7c731a2759ea1ecd8ee8a48e0e2c35.json  query-bdd7f6fe30252d0111d3adc604ae9e9611d3b39cd3c8608ebb6f7a1bbac495a8.json  query-c35e3acee0d979be66566cefae883eaae118bfa31ed7a48fed39d793dc059dfc.json
migration/: def.sql
src/: action.rs  category.rs  command.rs  config.rs  consume.rs  db.rs  generator.rs  lib.rs  replacer.rs  test.rs  util.rs
src/category/: category_of_redirects.rs  image_wanted.rs  template.rs
src/category/template/: category_of_redirects.rs  image_wanted.rs
src/command/: duplicate.rs  parse.rs  reassignment.rs  remove.rs
src/replacer/: category_tag.rs  recursion.rs  template.rs
src/replacer/template/: category_of_redirects.rs  image_requested.rs
