[package]
name = "queuebot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "daily_page_create"
path = "src/bin/daily_page_create.rs"

[[bin]]
name = "queue_consume"
path = "src/bin/queue_consume.rs"

[[bin]]
name = "discussion_list_generate"
path = "src/bin/discussion_list_generate.rs"

[[bin]]
name = "rollback"
path = "src/bin/rollback.rs"

[dependencies]
anyhow = "1.0.82"
backon = "0.5.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
    "unstable-locales",
] }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
derivative = "2.2.0"
frunk_core = "0.4.2"
futures-util = "0.3.30"
indexmap = "2.2.6"
mwapi_responses = "0.4.2"
mwbot = "0.6.1"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.8.0", features = [
    "tls-rustls",
    "mysql",
    "json",
    "uuid",
    "macros",
    "runtime-tokio",
] }
tap = "1.0.1"
tokio = { version = "1.37.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.2", features = ["uuid"] }
uuid = "1.8.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
pretty_assertions = "1.4.0"
indoc = "2.0.5"
rstest = "0.22.0"
